# raic-2022

./: .gitignore  CMakeLists.txt  config.json  main.cpp  paralel_conf_0.json  py_comparep_pr.py  py_comparer.py  run.sh  stats
codegame/: ClientMessage.cpp  ClientMessage.hpp  ServerMessage.cpp  ServerMessage.hpp
debugging/: Camera.cpp  Camera.hpp  Color.hpp  ColoredVertex.hpp  DebugCommand.cpp  DebugCommand.hpp  DebugData.cpp  DebugData.hpp  DebugState.cpp  DebugState.hpp
include/: DebugInterface.hpp  MyStrategy.hpp  Simulator.hpp
model/: Action.hpp  ActionOrder.cpp  ActionOrder.hpp  ActionType.hpp  Constants.hpp  Game.hpp  Item.cpp  Item.hpp  Loot.cpp  Loot.hpp  Obstacle.hpp  Order.hpp  Player.hpp  Projectile.cpp  Projectile.hpp  Ray.cpp  Ray.hpp  Sound.hpp  SoundProperties.hpp  Unit.cpp  Unit.hpp  UnitOrder.cpp  UnitOrder.hpp  Vec2.cpp  Vec2.hpp  WeaponProperties.hpp  Zone.hpp
source/: MyStrategy.cpp  Simulator.cpp
stream/: Stream.cpp  TcpStream.cpp  TcpStream.hpp
